--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "keywords": [
     "react",
     "typescript",
-    "webpack"
+    "webpack",
+    "react-router",
+    "tailwindcss"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -26,11 +29,16 @@
     "@babel/preset-typescript": "^7.23.9",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4",
